# maddad

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yaml  test_package.yaml  test_package_main.yaml
csrc/: decode_beat_and_downbeat_peaks_by_viterbi.cpp  decode_beat_peaks_by_viterbi.cpp  maddad.h
maddad/configs/: config.yaml  download-beatthis.yaml
maddad/configs/system/: default.yaml
maddad/functional/: __init__.py  activation.py  dbn.py  positional_encoding.py  segment.py  stft.py
maddad/models/: __init__.py  beatthis.py
maddad/modules/: activation.py  beatthis.py  normalization.py  positional_encoding.py
maddad/pipelines/beat/: __init__.py  base.py  beatthis.py
maddad/pipelines/beat_and_downbeat/: __init__.py  base.py  beatthis.py
maddad/transforms/: __init__.py  beat.py  beat_and_downbeat.py  beatthis.py  melspectrogram.py  stft.py
maddad/utils/: __init__.py
maddad/utils/_github/: __init__.py
maddad/utils/_hydra/: __init__.py
maddad/utils/cache/: __init__.py
maddad/utils/data/download/: __init__.py
maddad/utils/distributed/: __init__.py
recipes/BeatThis/BeatThis/: README.md  run.sh
recipes/BeatThis/_common/: download.sh
tests/maddad_testing/utils/: __init__.py
tests/maddad_testing/utils/cache/: __init__.py
tests/package/functional/: test_dbn.py  test_stft.py
tests/package/pipelines/: test_beatthis_pipeline.py
tests/package/transforms/: test_beatthis_transforms.py
tests/scripts/: free_ubuntu_disk.sh  install_macos_dependencies.sh  install_ubuntu_dependencies.sh  install_windows_dependencies.ps1  overwrite_pyproject_toml.py  overwrite_torchcodec_requirement.py  verify_torch_version.py
