[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "maddad"
authors = [
    {name = "Takuya Hasumi"},
]
description = "Toolkit for beat detection."
readme = "README.md"
license = {file = "LICENSE"}
urls = {url = "https://github.com/tky823/maddad"}
requires-python = ">=3.10, <4"
dependencies = [
    "torch",
    "torchaudio",
    "tensorboard",
    "omegaconf",
    "hydra-core",
    "tqdm",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
tests = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
maddad-parse-run-command = "maddad.bin.parse_run_command:main"
maddad-download-beatthis = "maddad.bin.download_beatthis:main"

[tool.setuptools.dynamic]
version = {attr = "maddad.__version__"}

[tool.setuptools.packages.find]
include = [
    "maddad*",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.pytest.ini_options]
# to import relative paths
pythonpath = [
    "tests",
]
